# pub-project-auditor

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  README_KOR.md  SECURITY.md  compose.yml  pyproject.toml  release-please-config.json
.github/workflows/: ci.yml  docker.yml  release-please.yml
demo/dummy-api/: README.md  index.js  package.json
demo/hello-cli/: README.md  main.py
pub_auditor/: __init__.py  audit_log.py  cli.py  config.py  job_worker.py  jobs.py  masking.py  runner.py  scanner.py  server.py
pub_auditor/tasks/: __init__.py  _common.py  review.py  security.py
pub_auditor/web/: app.js  index.html  style.css
tests/: test_auth.py  test_cli.py  test_hardening.py  test_jobs.py  test_lifecycle.py  test_mask_paths.py  test_observability.py
